tinyc/test/bad/ptr-arith-mul-r.c
int main()
{
    int x;
    int *p = &x;

    1 * p;

    return 0;
}
